--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@ngui/map": "^0.30.3",
     "@ngx-translate/core": "^11.0.1",
     "@ngx-translate/http-loader": "^4.0.0",
+    "@swimlane/ngx-datatable": "^16.0.2",
     "@types/googlemaps": "^3.37.0",
     "bootstrap": "^4.3.1",
     "core-js": "^3.1.4",
