--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "bootstrap": "^4.3.1",
     "core-js": "^3.1.4",
     "flag-icon-css": "^3.4.5",
+    "ng-sidebar": "^9.2.0",
     "ngx-bootstrap": "^5.1.0",
     "rxjs": "^6.5.2",
     "tslib": "^1.9.0",
