--- a/package.json
+++ b/package.json
@@ -34,17 +34,20 @@
     "@ngx-translate/http-loader": "^4.0.0",
     "@swimlane/ngx-datatable": "^16.0.2",
     "@types/googlemaps": "^3.37.0",
+    "@types/jspdf": "^1.3.3",
     "bootstrap": "^4.3.1",
     "core-js": "^3.1.4",
     "flag-icon-css": "^3.4.5",
+    "jspdf": "^1.5.3",
     "ng-sidebar": "^9.2.0",
     "ngx-bootstrap": "^5.1.0",
+    "pdfmake": "^0.1.63",
     "rxjs": "^6.5.2",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.801.3",
+    "@angular-devkit/build-angular": "^0.803.21",
     "@angular/cli": "^8.1.2",
     "@angular/compiler-cli": "^8.1.3",
     "@angular/language-service": "^8.1.3",
