--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@fortawesome/angular-fontawesome": "^0.4.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.20",
     "@fortawesome/free-solid-svg-icons": "^5.10.0",
+    "@ng-bootstrap/ng-bootstrap": "^5.1.5",
     "@ngui/map": "^0.30.3",
     "@ngx-translate/core": "^11.0.1",
     "@ngx-translate/http-loader": "^4.0.0",
