--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "flag-icon-css": "^3.4.5",
     "ng-sidebar": "^9.2.0",
     "ngx-bootstrap": "^5.1.0",
+    "ngx-progressbar": "^2.1.1",
     "pdfmake": "^0.1.63",
     "rxjs": "^6.5.2",
     "tslib": "^1.9.0",
